[gd_scene load_steps=5 format=3 uid="uid://bb62lvnjrkmq"]

[ext_resource type="Script" path="res://New.gd" id="1_yfkjd"]
[ext_resource type="Texture2D" uid="uid://o362rv68bvhd" path="res://107033-light-blue-abstract.jpg" id="2_ahgs2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4foi"]
bg_color = Color(0.239216, 0.380392, 0.403922, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ncic"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="New" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfkjd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ahgs2")
expand_mode = 5
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "STUDENT ASSISTANT
by Cole and James"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Budget" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_h4foi")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ncic")
text = "  Budget  "

[node name="Grades" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_h4foi")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ncic")
text = "  Grades Tracker  "

[node name="Todo" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_h4foi")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ncic")
text = "  To-do List  "

[connection signal="pressed" from="MarginContainer/VBoxContainer/Budget" to="." method="_on_budget_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Grades" to="." method="_on_grades_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Todo" to="." method="_on_todo_pressed"]
